--- a/basics/templates/basics/information_view.html
+++ b/basics/templates/basics/information_view.html
@@ -97,6 +97,12 @@
                                         <button id="standard-grey-button-light" type="submit " class="btn btn-block btn-lg btn-primary"><span class="glyphicon glyphicon-comment"></span> Comment</button>
                                     </div>
                                 </div>
+                            {% else %}
+                                <div class="row">
+                                    <div class="col-sm-3 col-sm-offset-9">
+                                        <button id="standard-grey-button-light" type="submit " class="btn btn-block btn-lg btn-primary"><span class="glyphicon glyphicon-comment"></span> Comment</button>
+                                    </div>
+                                </div>
                             {% endif %}
                         </form>
 
