redesign privacy page

--- a/basics/templates/basics/contact_us.html
+++ b/basics/templates/basics/contact_us.html
@@ -1,11 +1,10 @@
 {% extends 'basics/base.html' %}
 {% block content %}
 
-<!-- Introduction Row -->
 <div id="standard-modal">
 	<div class="modal-content">
 		<div class="modal-header">
-			<h2 class="text-center" id="standard-modal-headline">Contact Us</h2>
+			<h2 class="text-center" id="standard-modal-headline">Contact Us<br><small>Use this form for every question you have.</small></h2>
 		</div>
 		<div class="modal-body">
 			<form class="form" role="form" method="post" accept-charset="UTF-8">
@@ -33,4 +32,5 @@
 		</div>
 	</div>
 </div>
+
 {% endblock %}
