redesign password reset; rechaptcha is now responsive

--- a/basics/templates/basics/password_reset.html
+++ b/basics/templates/basics/password_reset.html
@@ -1,43 +1,84 @@
 {% extends 'basics/base.html' %}
-
 {% block content %}
-<div class="container-fluid" id="wrapper">
 
-    <div class="modal-dialog" id="sign-up">
-  		<div class="modal-content">
-  			<div class="modal-header">
-  				<h1 class="text-center">Reset Password</h1>
-  			</div>
-  			<div class="modal-body">
-  				<form class="form" role="form" method="post"  accept-charset="UTF-8" id="login-nav">
-	          {% csrf_token %}
-	  				<div class="form-group">
-	  					<input type="email" class="form-control input-lg" placeholder="Email" name="email" required/>
-	  				</div>
-
-            {% if messages %}
-                {% for message in messages %}
-                  {% if message.message == 'wc' %}
-                  <div class="form-group">
-                    <div class="error-messages">
-                        <p>Proof that you are not a robot by solving the reCAPTCHA.</p>
-                  </div>
+<div id="standard-modal">
+	<div class="modal-content">
+		<div class="modal-header">
+			<h2 class="text-center" id="standard-modal-headline">Reset Password<br><small>Use this form, if you forget your password. We will send you a new one via email.</small></h2>
+		</div>
+		<div class="modal-body">
+            <div class="row">
+                <div class="col-sm-8 col-sm-offset-2">
+                    <form class="form" role="form" method="post"  accept-charset="UTF-8">
+                    {% csrf_token %}
+                        <h4>Enter your email address:</h4>
+                        <div class="form-group">
+                            <input type="email" class="form-control input-lg" placeholder="Email" name="email" required/>
+                        </div>
+                        {% if messages %}
+                            {% for message in messages %}
+                                {% if message.message == 'wc' %}
+                                    <div class="form-group">
+                                        <div class="error-messages">
+                                            <p>Proof that you aren't a robot by solving the reCAPTCHA.</p>
+                                        </div>
+                                    </div>
+                                {% else %}
+                                    <h4>Proof that you aren't a robot:</h4>
+                                {% endif %}
+                            {% endfor %}
+                        {% else %}
+                            <h4>Proof that you aren't a robot:</h4>
+                        {% endif %}
+                        <div class="row">
+                            <div class="col-sm-7">
+                                <div class="form-group">
+                                    <div class="g-recaptcha" data-sitekey="6LdLNSETAAAAAPANCWc4cOCvtDAL3I6GYWwdI8j8"></div>
+                                </div>
+                            </div>
+                            <div class="col-sm-5">
+                                <div class="form-group">
+                                    <input id="standard-grey-button-bold" type="submit" class="btn btn-block btn-lg btn-primary" style="margin-top: 15px;" value="Reset Password"/>
+                                </div>
+                            </div>
+                        </div>
+                    </form>
                 </div>
-                  {% endif %}
-                {% endfor %}
-            {% endif %}
-            <div class="form-group">
-              <div class="g-recaptcha" data-sitekey="6LdLNSETAAAAAPANCWc4cOCvtDAL3I6GYWwdI8j8" style="transform:scale(0.77);-webkit-transform:scale(0.77);transform-origin:0 0;-webkit-transform-origin:0 0;"></div>
-              </div>
-	  				<div class="form-group">
-	  					<input type="submit" class="btn btn-block btn-lg btn-primary" value="Send"/>
-	  				</div>
-  				</form>
-  			</div>
-  		</div>
-    </div>
-    <div id="description-counter">
-      <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
-    </div>
+            </div>
+		</div>
+	</div>
 </div>
+
+<!-- script for responsive recaptcha -->
+<script>
+
+    $(window).ready(function() {
+        var width = $('.g-recaptcha').parent().width();
+        if (width < 302) {
+            var scale = width / 302;
+    	    $('.g-recaptcha').css('transform', 'scale(' + scale + ')');
+    	    $('.g-recaptcha').css('-webkit-transform', 'scale(' + scale + ')');
+    	    $('.g-recaptcha').css('transform-origin', '0 0');
+    	    $('.g-recaptcha').css('-webkit-transform-origin', '0 0');
+        }
+    });
+
+    $(window).resize(function() {
+        var width = $('.g-recaptcha').parent().width();
+        if (width < 302) {
+            var scale = width / 302;
+    	    $('.g-recaptcha').css('transform', 'scale(' + scale + ')');
+    	    $('.g-recaptcha').css('-webkit-transform', 'scale(' + scale + ')');
+    	    $('.g-recaptcha').css('transform-origin', '0 0');
+    	    $('.g-recaptcha').css('-webkit-transform-origin', '0 0');
+        }else{
+            $('.g-recaptcha').css('transform', 'scale(1)');
+    	    $('.g-recaptcha').css('-webkit-transform', 'scale(1)');
+    	    $('.g-recaptcha').css('transform-origin', '0 0');
+    	    $('.g-recaptcha').css('-webkit-transform-origin', '0 0');
+        }
+    });
+
+</script>
+
 {% endblock %}
