redesign immediate aid; fixed some small bugs

--- a/basics/templates/basics/actofgoods_startpage.html
+++ b/basics/templates/basics/actofgoods_startpage.html
@@ -91,7 +91,7 @@
 	    						{% endfor %}
 							{% endif %}
 						<div class="form-group">
-             				<p id="choose-location-text">We need your roughly location to provide only necessary information for you.
+             				<p id="choose-location-text">We need your approximate location to provide only necessary information for you.
       					</p>
 						</div>
                         <div class="form-group">
