--- a/basics/templates/basics/map_testing.html
+++ b/basics/templates/basics/map_testing.html
@@ -59,7 +59,7 @@
 <div class="form-group" style="display: none;">
 	<input type="float" class="form-control input-lg"  id="lat" name="lat"/>
 </div>
-<button id="standard-grey-button-bold" type="button" class="btn btn-primary" data-toggle="modal" data-target="#location-map-modal">Choose location</button>
+<button id="standard-grey-button-bold" type="button" class="btn btn-primary btn-block btn-lg" data-toggle="modal" data-target="#location-map-modal">Choose location</button>
 <!-- Modal -->
 <div class="modal fade" id="location-map-modal">
    	<div class="modal-dialog modal-lg">
