--- a/basics/templates/basics/aboutus.html
+++ b/basics/templates/basics/aboutus.html
@@ -4,11 +4,11 @@
 <div id="standard-modal">
 	<div class="modal-content">
 		<div class="modal-header">
-			<h2 class="text-center" id="standard-modal-headline">About Us<br><small>It's Nice to Meet You!</small></h2>
+			<h2 class="text-center" id="standard-modal-headline">About Us<br><small>It's nice to meet you!</small></h2>
 		</div>
 		<div class="modal-body">
 			<h3>Welcome to Act of Goods</h3>
-            <p>Our team , which is responsible for the maintenance and design of this site , consists of a chaotic mass of 8 students of the Technical University of Berlin.<br>
+            <p>Our team, which is responsible for the maintenance and design of this site, consists of a chaotic mass of 8 students of the Technical University of Berlin.<br>
             We are proud to present you our concept for a good cause.</p>
             <h3>Our Team:</h3>
             <div class="row">
