working on timeline

--- a/basics/templates/basics/information_view.html
+++ b/basics/templates/basics/information_view.html
@@ -87,7 +87,7 @@
                                 </div>
                             </div>
                         {% empty %}
-                            <h4>There are no comments for this information.</h4>
+                            <h4 style="margin-bottom: 30px;">There are no comments for this information.</h4>
                         {% endfor %}
 
                         <h4>Write a Comment:</h4>
