--- a/basics/templates/basics/chat.html
+++ b/basics/templates/basics/chat.html
@@ -8,44 +8,47 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&amp;lang=en">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://code.getmdl.io/1.1.3/material.blue_grey-blue.min.css" />
-    <link rel="stylesheet" href="{% static 'basics/css/styles.css' %}">
+    <link rel="stylesheet" href="{% static 'basics/css/styles.css' %}"/>
     <script src="https://fb.me/react-15.0.2.js"></script>
     <script src="https://fb.me/react-dom-15.0.2.js"></script>
     <script src="https://code.getmdl.io/1.1.3/material.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.34/browser.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
 
   <body>
-  <div class = "row " style="min-height: 500px; box-shadow: 0 0 30px black; height:70%; border-radius: 1em;" >
-    <!--<div class="col-md-4">
-      <div class="card card-block">
-        <h4 class="card-title">Card title</h4>
+  <!--<div class = "row " style="min-height: 500px; box-shadow: 0 0 30px black; height:70%; border-radius: 1em;" >-->
 
-          {% for room in rooms%}
 
-          <div class="row">
-            <div class="col-sm-12">
-                <div class="card card-block">
-                  <h3 class="card-title">{{room.need.headline}}</h3>
-                  <p class="card-text">{{room.user_req}}</p>
-                  <a href="{% url 'basics:chat_room' roomname=room.name %}" class="btn btn-primary">Go here</a>
-                </div>
+    <div class="row">
+      <div class="container col-md-4" >
+        <div id="standart-modal"  >
+          <div class="modal-content">
+            <div class="modal-header">
+              <h4 class="modal-title">Your Chats</h4>
+            </div>
+            <div class="modal-body">
+              <div id="rooms-container">
+              </div>
             </div>
           </div>
-          {% endfor %}
+        </div>
       </div>
-      <a href="{% url 'basics:kick_user' roomname=roomname %}" class="btn btn-primary">Kick User</a>
-    </div>-->
-    <div class="col-md-4 col-xs-12" style="min-height: 500px; background-color: #d1d1d1; height:100%;position:relative;">
-      <div class="card card-block"  style="height:90%; position:relative;">
-        <h4 class="card-title" style="position: relativ; height:5%;">Your Chats</h4>
-          <div id="rooms-container">
+
+      <div class="col-md-8 col-xs-12 shadow-small" >
+        <div id="standart-modal"  >
+          <div class="modal-content">
+            <div class="modal-header">
+              <h4 class="modal-title">{{ roomname }}</h4>
+            </div>
+            <div class="modal-body">
+              <div id="app">
+              </div>
+            </div>
           </div>
-
-
+        </div>
       </div>
     </div>
-    <div class="col-md-8 col-xs-12 shadow-small" id="app"></div>
-    </div>
-    <script>
+  <script type="text/babel">
 'use strict';
 
 (function (React, ReactDOM, window, document, MDL) {
@@ -55,31 +58,25 @@
     return React.createElement('div', { className: 'mdl-progress mdl-js-progress mdl-progress__indeterminate' });
   };
 
+
   var Message = function Message(props) {
     var classString = props.ownMessage ? 'own message__text' : 'message__text';
     var classString = props.systemMessage ? 'system ':classString;
+    var longClassString = classString + "text-center message clearfix"
     var user = props.ownMessage ? 'Own' : 'Other '
     var user = props.systemMessage? '': user
-    return React.createElement(
-      'div',
-      { className: classString + 'text-center message clearfix' },
-      React.createElement(
-        'div',
-        { className: 'message__author' },
-        user     //props.author
-      ),
-      React.createElement('div', { className: 'message__avatar' }),
-      React.createElement(
-        'div',
-        { className: classString + '' },
-        props.text,
-        React.createElement(
-          'div',
-          { className: "small-text"},
-          props.date
-        )
-      )
-
+    return (
+      <div className={longClassString}>
+        <div className="message__author">
+          {user}
+        </div>
+        <div className={classString}>
+          {props.text}
+          <div className="small-text">
+            {props.date}
+          </div>
+        </div>
+      </div>
     );
   };
 
@@ -96,17 +93,44 @@
     },
 
     render: function render() {
-      return React.createElement(
-        'div',
-        { className: 'message-list', ref: this.getNodeRef},
-        this.props.children
+      return (/*React.createElement(
+          'div',
+          { className: 'message-list', ref: this.getNodeRef},
+          this.props.children
+       );*/
 
+        <div className="message-list" ref={this.getNodeRef}>
+          {this.props.children}
+        </div>
       );
     }
   });
 
   var InputSection = function InputSection(props) {
-    return React.createElement(
+    var firstClass = "clearfix";
+    return (
+      <div className={firstClass}>
+        <div className="form-group">
+        <div>
+          <textarea onKeyDown= {props.handleKeyDown}
+          className= 'form-control input-lg'
+          type= 'text'
+          id= 'chat-input'
+          value= {props.inputValue}
+          onChange= {props.handleChange}
+          onBlur= {props.handleBlur}/>
+        </div>
+        </div>
+        <div className="float-right button-container">
+          <button onClick={props.handleClick}
+          className= 'btn btn-primary'
+          type= 'submit' >
+          {props.buttonText}
+          </button>
+        </div>
+      </div>
+    );
+    React.createElement(
       'div',
       { className: props.specificClass + ' clearfix' },
       React.createElement(
@@ -141,68 +165,6 @@
     );
   };
 
-  /*var ChannelSelector = React.createClass({
-    displayName: 'ChannelSelector',
-
-
-    getInitialState: function getInitialState() {
-      return {
-        channel: this.props.currentChannel
-      };
-    },
-
-    handleChange: function handleChange(e) {
-      this.setState({
-        channel: e.target.value
-      });
-    },
-
-    changeChannel: function changeChannel() {
-      if (this.state.channel === '') {
-        return;
-      }
-      this.props.handleChatChange(this.state.channel);
-    },
-
-    resetInput: function resetInput() {
-      this.setState({
-        channel: this.props.currentChannel
-      });
-    },
-
-    handleKeyDown: function handleKeyDown(e) {
-      switch (e.keyCode) {
-        case 13:
-          e.preventDefault();
-          this.changeChannel();
-          e.target.blur();
-          break;
-        case 27:
-          e.preventDefault();
-          this.resetInput();
-          e.target.blur();
-          break;
-        case 32:
-          e.preventDefault();
-          break;
-        default:
-          return;
-      }
-    },
-
-    render: function render() {
-      return React.createElement(InputSection, {
-        specificClass: 'chat-name',
-        handleKeyDown: this.handleKeyDown,
-        inputValue: this.state.channel,
-        handleChange: this.handleChange,
-        labelText: 'Currently connected to channel',
-        handleClick: this.changeChannel,
-        buttonText: 'Connect'
-      });
-    }
-  });
-  */
 
   var MessageEditor = React.createClass({
     displayName: 'MessageEditor',
@@ -254,6 +216,7 @@
     }
 
   });
+
 
   var ChatContainer = React.createClass({
     displayName: 'ChatContainer',
@@ -347,7 +310,6 @@
 
     sendNumber: function sendNumber(number) {
       if(this.socket != null){
-        alert(number);
         this.sendMessage(number);
       };
     },
@@ -368,6 +330,28 @@
       }.bind(this));
       console.log(messages);
       var visibilityClass = !this.state.connected ? 'hidden' : '';
+      return (
+        <div className="mdl-cell--stretch" ref={this.getNodeRef}>
+          {!this.state.connected ? React.createElement(LoadingBar, null) : null}
+          <div>
+            <h4>{this.state.name}</h4>
+            <a id="standard-grey-button-bold" className="btn btn-primary btn-kick" href="{% url 'basics:kick_user' roomname=roomname %}">
+              {% if roomname|is_own:request.user %} 'Kick User' {% else %} 'leave' {% endif %}
+            </a>
+            <a id="standard-grey-button-bold" className="btn btn-primary btn-kick" onClick={this.sendNumber.bind(null, 'number')}>
+              Send Number
+            </a>
+          </div>
+          <MessageList>
+            {messages}
+          </MessageList>
+          <div className="actions-containers ">
+            <MessageEditor sendMessage={this.sendMessage}>
+
+            </MessageEditor>
+          </div>
+        </div>
+      );/*
       return React.createElement(
         'div',
         { className: ' mdl-cell--stretch', ref: this.getNodeRef },
@@ -401,16 +385,31 @@
           { className: 'actions-containers mdl-shadow--3dp ' + visibilityClass },
           /*React.createElement(ChannelSelector, {
             currentChannel: this.state.channel,
-            handleChatChange: this.handleChatChange }),*/
+            handleChatChange: this.handleChatChange }),
           React.createElement(MessageEditor, { sendMessage: this.sendMessage })
         )
-      );
+      );*/
     }
 
   });
 
   var Room = function Room(props){
-    return React.createElement(
+    var href = "/chat/"+props['room']['hash'];
+    return (
+      <a className="goupe-list-element" id="standard-list-group-item-div" href={href}>
+        <div className="row">
+        <div className="col-sm-11 grey room" id="standart-modal">
+          <div>
+            <div className="card card-block">
+              <h3 className="card-title">{props['room']['name']} </h3>
+              <p className="card-text"> {props['room']['date']} </p>
+            </div>
+          </div>
+        </div>
+        </div>
+      </a>
+    );
+    /*React.createElement(
       'a',
       {className:'goupe-list-element ', id:'standard-list-group-item-div', href:"/chat/"+props['room']['hash'] },
       React.createElement(
@@ -435,7 +434,8 @@
           )
         )
       )
-    )
+    );
+    */
   };
   var RoomsContainer = React.createClass({
     displayName: 'RoomsContainer',
@@ -479,11 +479,16 @@
       for(var i =0;i<this.state.rooms.length;i++){
         rendered_rooms.push(React.createElement(Room, {key:i, room:this.state.rooms[i], handleClick:this.handleClick}))
       }
-      return React.createElement(
+      return (
+        <div className="room-container" ref={this.getNodeRef}>
+          {rendered_rooms}
+        </div>
+      );/*React.createElement(
         'div',
         { className: 'room-container room-container-small', ref: this.getNodeRef },
         rendered_rooms
-      );
+      );*/
+
     }
   })
   //Initialisiere 2 Chats
@@ -499,12 +504,15 @@
     },
 
     alert_some : function alert_some(){
-      alert("fuckers")
     },
 
     render: function render() {
       this.state.chatContainer = React.createElement(ChatContainer, { key: 0 });
-      return React.createElement('div',{ className: '' } ,this.state.chatContainer)
+      return (
+        <div>
+          {this.state.chatContainer}
+        </div>
+      );//React.createElement('div',{ className: '' } ,this.state.chatContainer);
     }
   });
 
