change solor of notification

--- a/basics/templates/basics/actofgoods_startpage.html
+++ b/basics/templates/basics/actofgoods_startpage.html
@@ -3,8 +3,8 @@
 
 <style>
     #standard-notification {
-        background-color:  rgba(76,78,73,.9);
-        border: 2px solid #4C4E49;
+        background-color: #EDEDED;
+        border: 1px solid #DDD;
         border-radius: 8px;
         text-align: center;
     }
